# reticolo

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  CLAUDE.md  CLEANUP_PLAN.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile.in  PLAN_review_fixes.md  README.md  aclocal.m4  build.sh  config.h.in  configure  configure.ac  typescript
apps/: BoseGas_HMCMonteCarlo.cpp  BoseGas_MetropolisMonteCarlo.cpp  CMakeLists.txt  LLRBoseGas.cpp  MetropolisMonteCarlo.cpp  WeakFieldEuclideanGR_HMC.cpp  WeakFieldEuclideanGR_MCMC.cpp  _LLRBoseGas.cpp  bench_actions.cpp  bench_gauge_pad.cpp  bench_gauge_vs_scalar.cpp  bench_hmc_breakdown.cpp  bench_integrator_efficiency.cpp  bench_integrators.cpp  bench_metropolis_sweep.cpp  bench_phase_quenched.cpp  bench_precision_hmc.cpp  bench_readme.cpp  bench_rng.cpp  bench_scalars.cpp  bench_scaling_all.cpp  bench_scaling_site.cpp  bench_scaling_su3.cpp  bench_volume_scaling.cpp  bench_wilson_vs_compact_u1.cpp  bose_gas_hmc.cpp  bose_gas_hmc_f32.cpp  bose_gas_llr.cpp  hdf5_tests.cpp  llr.cpp  on_sigma_metropolis.cpp  on_sigma_wolff.cpp  param_span_hmc.cpp  phi4_cuda_hmc.cu  phi4_hmc.cpp  phi4_hmc_f32.cpp  phi4_llr.cpp  phi6_hmc.cpp  phi6_hmc_f32.cpp  phi6_llr.cpp  (+26 more)
apps/_bench/: flops.hpp  hot_init.hpp  philox_normal_fill.hpp  timing.hpp
apps/_tune/: state_io.hpp
apps/cuda/: bench_cuda_hmc.cu  bench_hmc_cuda.cu  bose_gas_cuda_hmc.cu  bose_gas_hmc_cuda.cu  bose_gas_llr_cuda.cu  cuda_nightly.cu  nightly_cuda.cu  phi4_cuda_hmc.cu  phi4_hmc_cuda.cu  phi4_llr_cuda.cu  profile_cuda_hmc.cu  profile_hmc_cuda.cu  su2_cuda_hmc.cu  su2_hmc_cuda.cu  su2_llr_cuda.cu  su3_llr_cuda.cu  u1_llr_cuda.cu
examples/: CMakeLists.txt  README.md
examples/01_phi4_tuning/: CMakeLists.txt  README.md  analyze.py  phi4_hmc.cpp  run.sh
examples/02_on_sigma_critical/: CMakeLists.txt  README.md  analyze.py  on_sigma_wolff.cpp  run.sh
examples/02_phi4_algorithm_tuning/: CMakeLists.txt  README.md  analyze.py  plot.py  run.sh  tune_phi4_hmc_leapfrog.cpp  tune_phi4_hmc_omelyan2.cpp  tune_phi4_hmc_omelyan4.cpp
examples/03_phi4_algorithm_tuning/: CMakeLists.txt  README.md  analyze.py  plot.py  run.sh  tune_phi4_hmc_leapfrog.cpp  tune_phi4_metropolis.cpp
examples/03_phi4_llr/: CMakeLists.txt  README.md  phi4_hmc.cpp  phi4_llr.cpp
examples/04_phi4_llr/: .gitignore  CMakeLists.txt  README.md  analyze.py  phi4_hmc.cpp  run.sh
examples/04_u1_llr/: CMakeLists.txt  README.md  analyze.py  analyze_critical.py  animate_critical.py  run.sh  u1_hmc.cpp  u1_llr.cpp
examples/05_bose_gas_llr/: .gitignore  CMakeLists.txt  README.md  analyze.py  bose_gas_hmc.cpp  bose_gas_llr.cpp
examples/05_u1_llr/: .gitignore  CMakeLists.txt  README.md  analyze.py  run.sh  run_critical.sh  run_paper.sh  u1_hmc.cpp  u1_llr.cpp
examples/06_bose_gas_llr/: .gitignore  CMakeLists.txt  analyze.py  bose_gas_hmc.cpp  bose_gas_llr.cpp  run.sh
examples/06_su2_llr/: CMakeLists.txt  README.md  analyze.py  su2_hmc.cpp  su2_llr.cpp
examples/07_su2_llr/: CMakeLists.txt  README.md  analyze.py  run.sh  su2_hmc.cpp
examples/07_volume_scaling/: CMakeLists.txt  README.md  analyze.py  bench_volume_scaling.cpp
examples/08_u1_llr_smoothed/: CMakeLists.txt  README.md  analyze.py  animate.py  run.sh  u1_llr.cpp  u1_llr_smoothed.cpp
examples/08_volume_scaling/: CMakeLists.txt  README.md  bench_volume_scaling.cpp  run.sh
examples/09_smoothed_synthetic_benchmark/: README.md  benchmark.py
examples/09_u1_llr_smoothed/: CMakeLists.txt  README.md  analyze.py  animate.py  run.sh  u1_llr.cpp  u1_llr_smoothed.cpp
examples/10_cpu_vs_cuda_llr/: README.md  analyze.py  run.sh
examples/10_smoothed_synthetic_benchmark/: benchmark.py
examples/11_generalized_dos_llr/: .gitignore  CMakeLists.txt  README.md  analyze.py  generalized_dos_llr.cpp  observable.hpp  run.sh
examples/_common/: autocorr.py  jackknife.py  llr_polyfit.py  llr_reconstruct.py  oscillating_integral.py  preset.sh
src/: CMakeLists.txt  LLR.hpp  Makefile.am  Makefile.in  main.cpp  reticolo.hpp
src/action/: action.hpp  action_base.hpp  gr.hpp  phi4.hpp
src/cli/: CMakeLists.txt
src/cuda/: CMakeLists.txt  bench_hmc.cu  f32_probe.cu  gauge_probe.cu  hmc_probe.cu  phi4_probe.cu  profile_hmc.cu  reduce.cu  rng_probe.cu  scalar_probe.cu  selftest.cu  stencil_probe.cu  su2_probe.cu  su3_probe.cu  u1_probe.cu
src/io/: CMakeLists.txt  reader.cpp  writer.cpp
src/lattice/: lattice.hpp
src/lint/: CMakeLists.txt  amalgamation.cpp
src/llr/: controller.hpp  llr_controller.hpp  llr_worker.hpp  worker.hpp
src/mc/: mcmc.hpp
src/montecarlo/: hmc.hpp  metropolis.hpp  montecarlo.hpp
src/reticolo/: ReticoloCore.hpp  core.hpp  reticolo.hpp  sample_config.yaml
src/tools/: io.hpp  io_utils.hpp  logger.hpp  timer.hpp  types.hpp
tests/: .clang-tidy  CMakeLists.txt  field_rw.cpp  hdf5_basic.cpp  hdf5_expandable_lattice.cpp  lattice.cpp  lattice_uptr.cpp  registry_metadata.cpp  runtime_api.cpp  test_helpers.hpp  test_main.cpp
tests/apps/: llr_resume_helpers.hpp  smoke_helpers.hpp  test_bench_volume_scaling_smoke.cpp  test_bose_gas_cuda_hmc_smoke.cpp  test_bose_gas_hmc_cuda_smoke.cpp  test_bose_gas_hmc_smoke.cpp  test_bose_gas_llr_cuda_smoke.cpp  test_bose_gas_llr_smoke.cpp  test_on_sigma_metropolis_smoke.cpp  test_on_sigma_wolff_smoke.cpp  test_param_span_smoke.cpp  test_phi4_cuda_hmc_smoke.cpp  test_phi4_hmc_cuda_smoke.cpp  test_phi4_hmc_resume_equivalence.cpp  test_phi4_hmc_smoke.cpp  test_phi4_llr_cuda_smoke.cpp  test_phi4_llr_resume_equivalence.cpp  test_phi6_hmc_smoke.cpp  test_sine_gordon_hmc_smoke.cpp  test_su2_llr_cuda_smoke.cpp  test_su2_llr_resume_equivalence.cpp  test_su2_llr_smoke.cpp  test_su3_llr_cuda_smoke.cpp  test_u1_hmc_smoke.cpp  test_u1_llr_cuda_smoke.cpp  test_u1_llr_smoke.cpp  test_u1_llr_smoothed_resume_equivalence.cpp  test_u1_metropolis_smoke.cpp  test_xy_wolff_smoke.cpp
tests/cuda/: check_no_integrator_kernels.cmake  test_cuda_bose_gas.cu  test_cuda_checkpoint.cu  test_cuda_f32.cu  test_cuda_hmc.cu  test_cuda_phi4.cu  test_cuda_rng.cu  test_cuda_scalar.cu  test_cuda_selftest.cpp  test_cuda_stencil.cu  (+5 more)
(+566 files in other folders)
